--- a/ghostlist/public/ghostlist.html
+++ b/ghostlist/public/ghostlist.html
@@ -15,13 +15,19 @@
     
 
 <div class="allContent">
-    <nav>
+    <nav class="main">
         Normal sites have navigation. If this were a normal site, navigation would have been right here. But it isn't. So there...</nav>
     </nav>
     <header>
         <h1>the odd and creepy blog of a ghost</h1>
     </header>
-    <ul id="theBlog">
+    
+    <nav class="direction">
+        <ul>
+            <li><a class="active" href="#">Virtical</a></li><li><a href="#">Horizontal</a></li>
+        </ul>
+    </nav>
+    <ul id="theBlog" class="virtical">
     </ul>
 </div><!--/.allContent-->
 
